# aws-unused-analyzer

./: .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: release.yml
src/: analyzer.rs  finding.rs  lib.rs  main.rs
